@@ -1,3 +1,15 @@
+2015-03-27  Alex Christensen  <achristensen@webkit.org>
+
+        Fix WinCairo bot.
+        https://bugs.webkit.org/show_bug.cgi?id=143086
+
+        Reviewed by Brent Fulgham.
+
+        * Scripts/webkitdirs.pm:
+        (buildVisualStudioProject):
+        (runSvnUpdateAndResolveChangeLogs):
+        Use ActivePerl-friendly perl.
+
 2015-03-27  Csaba Osztrogonác  <ossy@webkit.org>
 
         URTBF after r182059 to fix the EFL build.
